packages/babel-core/test/fixtures/errors/error-config-function/babel.config.js
module.exports = function myConfig() {
  throw new Error("Error inside config!");
}
